fixed title overflowing on mobile devices

--- a/scss/_mobile.scss
+++ b/scss/_mobile.scss
@@ -81,7 +81,7 @@
 
     
     .lg-heading{
-        font-size: 5rem !important;
+        font-size: 3rem !important;
     }
 
     main#home h1{
